--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -19,19 +19,10 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v4
         with:
-          go-version: '1.20' # Specify your Go version here
+          go-version: '1.22'
 
       - name: Install dependencies
         run: go mod download
 
       - name: Run tests
         run: go test ./... -v
-
-      - name: Upload test results
-        if: always() # Always upload test results even if the test fails
-        uses: actions/upload-artifact@v3
-        with:
-          name: test-results
-          path: |
-            **/test-report.txt
-            **/coverage.out
