--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -26,3 +26,8 @@ jobs:
 
       - name: Run tests
         run: go test ./... -v
+      
+      - name: Upload results to Codecov
+        uses: codecov/codecov-action@v4
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
